--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "@next/font": "13.0.7",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "ajv": "^8.11.2",
+    "axios": "^1.2.1",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^6.8.1",
     "next": "13.0.7",
+    "next-auth": "^4.18.7",
+    "next-auth-client": "^1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
