--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ajv": "^8.11.2",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
+    "formik": "^2.2.9",
     "mongoose": "^6.8.1",
     "next": "13.0.7",
     "next-auth": "^4.18.7",
